Fixed crash when using the system keyboard; Improved interface for devices with small screen resolution; 3.0.5 Release.

--- a/sources/res/values/strings.xml
+++ b/sources/res/values/strings.xml
@@ -47,7 +47,11 @@
     <string name="send_me_bugs">You can always send your suggestions and remarks on\nwnezros@gmail.com</string>
     <string name="email">wnezros@gmail.com</string>
     <string name="in_new_version">In new version:</string>
-    <string name="in_new_version_info">"3.0.4:
+    <string name="in_new_version_info">"3.0.5:
+- Fixed crash when using the system keyboard
+- Improved interface for devices with small screen resolution
+
+3.0.4:
 - Fix interface
         
 3.0.3:
