--- a/sources/res/values/strings.xml
+++ b/sources/res/values/strings.xml
@@ -55,7 +55,14 @@
     <string name="send_me_bugs">You can always send your suggestions and remarks on\nwnezros@gmail.com</string>
     <string name="email">wnezros@gmail.com</string>
     <string name="in_new_version">In new version:</string>
-    <string name="in_new_version_info">"3.1.1:
+    <string name="in_new_version_info">"3.1.3:
+- Fixed division in calculator
+- Improved display of the tablets
+
+3.1.2:
+- Bug Fixes
+        
+3.1.1:
 - Added solution in calculator
 - Added cursor in text fields
         
